--- a/.github/workflows/build_rust.yml
+++ b/.github/workflows/build_rust.yml
@@ -12,11 +12,17 @@ env:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      run: cargo build --release
+    
+    
+    - name: Artifact
+      uses: actions/upload-artifact@v3
+      with:
+          name: AppBundler
+          path: ./target/release/TC-Id-Generator
+      
