--- a/.github/workflows/build_rust.yml
+++ b/.github/workflows/build_rust.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-lates, macos-latest]
-        version: [10, 12, 14]
+        # version: [10, 12, 14]
     runs-on: ${{ matrix.os }}
     # runs-on: macos-latest
 
