--- a/.github/workflows/build_rust.yml
+++ b/.github/workflows/build_rust.yml
@@ -13,6 +13,7 @@ jobs:
   build:
     strategy:
       matrix:
+        # os: [macos-latest]
         os: [ubuntu-latest, windows-lates, macos-latest]
         # version: [10, 12, 14]
     runs-on: ${{ matrix.os }}
@@ -28,5 +29,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
           name: TC-ID-Generator
-          path: ./target/release/TC-Id-Generator
+          path: ./target/release/TC-Id-Generator-${{ matrix.os }}
       
