--- a/.github/workflows/build_rust.yml
+++ b/.github/workflows/build_rust.yml
@@ -1,37 +1,3 @@
-# name: Rust on MacOS
-
-# on:
-#   push:
-#     branches: [ "master" ]
-#   pull_request:
-#     branches: [ "master" ]
-
-# env:
-#   CARGO_TERM_COLOR: always
-
-# jobs:
-#   build:
-#     strategy:
-#       matrix:
-#         # os: [macos-latest]
-#         os: [ubuntu-latest, windows-lates, macos-latest]
-#         # version: [10, 12, 14]
-#     runs-on: ${{ matrix.os }}
-#     # runs-on: macos-latest
-
-#     steps:
-#     - uses: actions/checkout@v3
-#     - name: Build
-#       run: cargo build --release
-    
-    
-#     - name: Artifact
-#       uses: actions/upload-artifact@v4
-#       with:
-#           name: TC-ID-Generator
-#           path: ./target/release/TC-Id-Generator-${{ matrix.os }}
-
-
 name: Rust Build and Release
 
 on:
@@ -47,7 +13,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -60,7 +26,7 @@ jobs:
     - name: Determine Artifact Name and Path
       id: artifact_setup
       run: |
-        ARTIFACT_NAME="release_name-${{ runner.os }}"
+        ARTIFACT_NAME="TCIdGenerator-${{ runner.os }}"
         BINARY_PATH="./target/release/TC-Id-Generator"
         if [[ "$RUNNER_OS" == "Windows" ]]; then
           BINARY_PATH="$BINARY_PATH.exe"
